# headroom

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Cargo.toml  PR.md  README.md  RUST_DEV.md  index.html  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  devcontainers.yml  docker.yml  eval.yml  init-e2e.yml  publish.yml  release.yml  rust.yml
ARCHITECTURE/: index.html
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
agno/: index.html
api/: index.html
benchmarks/: claude_session_mode_benchmark.py  index.html  proxy_mode_benchmark.py
ccr/: index.html
cli/: index.html
compression/: index.html
configuration/: index.html
content/docs/: releases.mdx
crates/headroom-core/: Cargo.toml
crates/headroom-core/src/relevance/: embedding.rs
crates/headroom-core/src/transforms/: content_detector.rs  mod.rs
crates/headroom-core/src/transforms/smart_crusher/: config.rs  crusher.rs
crates/headroom-core/src/transforms/smart_crusher/compaction/: mod.rs  walker.rs
crates/headroom-parity/src/: lib.rs
crates/headroom-proxy/: Cargo.toml
crates/headroom-proxy/src/: main.rs  proxy.rs  websocket.rs
crates/headroom-py/src/: lib.rs
docker-install/: index.html
docs/: benchmarks.md  cli.md  docker-install.md  persistent-installs.md  proxy.md  troubleshooting.md
docs/content/docs/: releases.mdx
e2e/: docker-native-install.sh
e2e/init/: Dockerfile  run.py
errors/: index.html
getting-started/: index.html
headroom/: __init__.py  client.py  compress.py  config.py  onnx_runtime.py  utils.py
headroom/backends/: litellm.py
headroom/ccr/: mcp_server.py
headroom/cli/: init.py  main.py  mcp.py  proxy.py  wrap.py
headroom/dashboard/templates/: dashboard.html
headroom/image/: compressor.py  onnx_router.py
headroom/install/: planner.py  providers.py
headroom/learn/: analyzer.py  writer.py
headroom/memory/: traffic_learner.py
headroom/memory/adapters/: embedders.py
headroom/providers/: __init__.py  install_registry.py  openai_compatible.py  proxy_routes.py  registry.py
headroom/providers/aider/: install.py  runtime.py
headroom/providers/claude/: __init__.py  install.py  runtime.py
headroom/providers/codex/: install.py
headroom/providers/copilot/: __init__.py  install.py  wrap.py
headroom/providers/cursor/: install.py  runtime.py
headroom/providers/openclaw/: install.py  wrap.py
headroom/proxy/: cost.py  helpers.py  models.py  prometheus_metrics.py  request_logger.py  savings_tracker.py  server.py  ws_session_registry.py
headroom/proxy/handlers/: anthropic.py  openai.py  streaming.py
headroom/telemetry/: beacon.py  context.py
headroom/tokenizers/: base.py
headroom/transforms/: __init__.py  content_router.py  kompress_compressor.py  log_compressor.py  pipeline.py  smart_crusher.py
image-compression/: index.html
integration-guide/: index.html
langchain/: index.html
learn/: index.html
macos-deployment/: index.html
mcp/: index.html
memory/: index.html
metrics/: index.html
plans/dynamic-smart-crusher/: index.html
plugins/headroom-agent-hooks/.claude-plugin/: plugin.json
plugins/headroom-agent-hooks/.github/plugin/: plugin.json
plugins/openclaw/: README.md
proxy/: index.html
quickstart/: index.html
scripts/: changelog-gen.py  install.ps1  install.sh  sync-plugin-versions.py  verify-versions.py  version-sync.py
scripts/tests/: test_changelog_gen.py  test_sync_plugin_versions.py  test_version_sync.py
sdk/: index.html
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  types.ts
sdk/typescript/src/adapters/: gemini.ts  vercel-ai.ts
sdk/typescript/test/: paths.test.ts
search/: search_index.json
shared-context/: index.html
strands/: index.html
tests/: test_acceptance.py  test_anthropic_pre_upstream_backpressure.py  test_bedrock_region.py  test_canonical_pipeline.py  test_ccr.py  test_claude_session_mode_benchmark.py  test_compress_failure.py  test_critical_fixes.py  test_image_compression.py  test_ml_model_registry_lifecycle.py  test_oauth_bearer_routing.py  test_plugin_manifests.py  test_pr208_changes.py  test_provider_codex_runtime.py  test_provider_copilot_wrap.py  test_provider_cursor.py  test_provider_proxy_routes.py  test_provider_registry.py  test_provider_registry_extended.py  test_proxy_anthropic_cache_stability.py  test_proxy_anthropic_compression_diagnostics.py  test_proxy_ccr.py  test_proxy_codex_route_aliases.py  test_proxy_handler_helpers.py  test_proxy_modes.py  test_proxy_openai_cache_stability.py  test_proxy_pipeline_lifecycle.py  test_proxy_savings_history.py  test_proxy_streaming_ratelimit_headers.py  test_release_version.py  test_release_workflows.py  test_relevance.py  test_smart_crusher_toin_attachment.py  test_text_compressors.py  test_token_headroom_mode.py  test_transforms_content_router.py
tests/test_cli/: test_init_cli.py  test_mcp.py  test_wrap_aider.py  test_wrap_copilot.py
tests/test_install/: test_native_installers.py  test_planner.py  test_providers.py  test_supervisors.py
tests/test_learn/: test_analyzer.py  test_scanner.py  test_writer.py
tests/test_memory/: test_traffic_learner.py
tests/test_proxy/: test_transformations_feed.py
tests/test_transforms/: test_kompress_compressor.py
text-compression/: index.html
transforms/: index.html
troubleshooting/: index.html
typescript-sdk/: index.html
wiki/: metrics.md  proxy.md
